# routelane

./: .gitignore  Cargo.toml  README.md
data/: io.github.routelane.desktop  io.github.routelane.policy
packaging/deb/: build-deb.sh
src/: config.rs  main.rs  models.rs
src/routing/: dns_router.rs  executor.rs  manager.rs  mod.rs  resolver.rs
src/ui/: i18n.rs  mod.rs  rule_row.rs  settings.rs  tray.rs  window.rs
